style.css
.signUp {
  width: 320px;
  height: 640px;
  background-color: rgb(255, 255, 255);
  margin: auto;
  padding: 0 25px 0 25px;
  border: solid rgb(187, 187, 187);
  border-width: 1px;
}

form {
  background-color: rgb(255, 255, 255);
  display: flex;
  flex-direction: column;
  /* padding: 25px 25px 0 25px; */
}

form > input {
  margin-bottom: 30px;
  margin-top: 10px;
  height: 30px;
}

.parentCompany {
  text-align: center;
  margin-bottom: 5px;
  clear: both;
  font-size: 40px;
}

.brands {
  text-align: center;
  font-size: 20px;
  margin-top: 0;
}

.signUpTitle {
  text-align: center;
  padding-top: 10px;
}

body {
  background-color: #eceef1;
}

#submit {
  width: 300px;
  height: 45px;
  padding: 1px 2px;
  margin: auto;
  background-color: rgb(41, 126, 218);
  color: white;
  border-radius: 8px;
  border: 0;
}

#signIn {
  width: 120px;
  height: 40px;
  padding: 1px 2px;
  margin: 0 20px 0 0;
  background-color: rgb(41, 126, 218);
  color: white;
  border-radius: 8px;
  border: 0;
}

header > section {
  display: flex;
  margin: 0 0 30px 0;
  float: right;
}

header > section > section p {
  margin: 5px 10px;
  font-size: 13px;
}

.createAccountInformation {
  margin: 0;
  font-size: 14px;
}

.phoneInformation {
  font-size: 10px;
  margin: 0 0 30px 0;
}

.phoneNumberField {
  margin-bottom: 5px;
}

.newAccountAgreement {
  font-size: 14px;
  text-align: center;
  margin-bottom: 30px;
}

form {
  margin-top: 25px;
}

.reCAPTCHA {
  font-size: 11px;
  text-align: center;
  margin: 20px 0;
  background-color: #eceef1;
  width: 100%;
  padding: 0 25px;
  position: relative;
  left: -25px;
  height: 55px;
  line-height: 55px;
}

footer section p {
  font-size: 13px;
  text-align: center;
  margin: 0;
}

footer section {
  margin: 25px 0;
}

a:link {
  text-decoration: none;
}

footer section p a {
  color: inherit;
}

.signUpTitle > h3 {
  font-size: 24px;
}

